force-app/main/default/objects/Professor__c/fields/Address__c.field-meta.xml
<CustomField>
    <fullName>Address__c</fullName>
    <formula>Account__r.BillingStreet + IF(ISBLANK(Account__r.BillingStreet), &quot;&quot;, BR()) + 
Account__r.BillingCity + IF(ISBLANK(Account__r.BillingCity), &quot;&quot;, BR()) + 
Account__r.BillingState + IF(ISBLANK(Account__r.BillingState), &quot;&quot;, &quot; &quot;) + 
Account__r.BillingPostalCode + IF(ISBLANK(Account__r.BillingPostalCode), &quot;&quot;, BR()) + 
Account__r.BillingCountry</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Address</label>
    <type>Text</type>
</CustomField>