force-app/main/default/objects/Professor__c/fields/Position__c.field-meta.xml
<CustomField>
    <fullName>Position__c</fullName>
    <label>Position</label>
    <type>MultiselectPicklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetName>ProfessorPositions</valueSetName>
    </valueSet>
</CustomField>